day-9/ingress/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-senhas
  labels:
    app: giropops-senhas
spec:
  selector:
    app: giropops-senhas
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: tcp-app
  type: ClusterIP
