day-9/ingress/ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas-static
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/enable-cors: "true
spec:
  rules:
  #- host: <Host>
  - http:
      paths:
      - pathType: Prefix
        path: "/static"
        backend:
          service:
            name: giropops-senhas
            port: 
              number: 5000
